--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 							            <div class="acme-news-ticker-box">
 							                <ul class="my-news-ticker-2">
 							                    <li><a href="#">Welcme to Kendrapara Autonomous College</a></li>
-							                    <li><a href="#">It is a Constituent College of Biju Patnaik University of Technology, Odisha</a></li>
+							                    
 							                    <li><a href="#">It is a NAAC Accredited Institute</a></li>
-							                    <li><a href="#">Courses are recognized by AICTE, New Delhi</a></li>
+							                    <li><a href="#">Courses are recognized by Utkal University, Bhubaneswar</a></li>
 							                    <li><a href="#">Well Infrastructure, academic environment, Anti-Ragging and Wi-Fi campus</a></li>
 							                    <li><a href="#">Excellent placement records</a></li>
 							                    <li><a href="#">Well equipped Labs, Library, Conference Hall and Smart Class-rooms</a></li>
