--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								                <div class="info-text">
 								                    <a href="javascript:void(0)">
 								                    	<span>Mail Us</span>
-														info@kac.edu.in
+														hod.cs.kac@gmail.com
 													</a>
 								                </div>
 								            </div>
