--- a/faculty.html
+++ b/faculty.html
@@ -96,8 +96,8 @@
 								<div class="logo-area">
 									<a href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
 									<div class="logo-header">
-										<h2>Kendrapara Autonomous College</h2>
-										<h3>Department of Computer Science</h3>
+										<h2>Department of Computer Science</h2>
+										<h3>Kendrapara Autonomous College</h3>
 										<h5>(NAAC Accredited 'A' Grade)</h5>
 									</div>
 								</div>
@@ -232,11 +232,20 @@
                 				<tbody>
 								<tr>
                 						<td>1</td>
-                						<td>Mr Ananda Chandra Nayak</td>
+                						<td>Dr. Ananda Chandra Nayak</td>
                 						<td>HOD</td>
-                						<td>MSc (Utkal University, Bhubaneswar)</td>
+                						<td>PhD (IIT Guwahati)</td>
                 						<td>nayakanand89@gmail.com</td>
                 						<td>9439530098</td>
+                						<td><img src="images/faculty.jpg" class="img-sm img-thumbnail" alt="image"></td>
+                					</tr>
+							<tr>
+                						<td>1</td>
+                						<td>Mrs. Saumyarani Maharana</td>
+                						<td>Lecturer</td>
+                						<td>MCA (Utkal University, vanivihar)</td>
+                						<td>sanguinesoumya@gmail.com</td>
+                						<td>7504328244</td>
                 						<td><img src="images/faculty.jpg" class="img-sm img-thumbnail" alt="image"></td>
                 					</tr>
                 					<tr>
