--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 							<div class="display-table-cell">
 								<div class="container">
 									<h1 class="slider-title" data-animation-in="fadeInUp" data-animation-out="animate-out">BUILD YOUR CAREER</h1>
-									<p data-animation-in="fadeInUp" data-animation-out="animate-out" class="slider-desc">Fusce sem dolor, interdum in efficitur at, faucibus nec lorem.Sed nec molestie justo.<br> Nunc quis sapien in arcu pharetra volutpat.Morbi nec vulputate dolor.</p>
+									
 								</div>
 							</div>
 						</div>
@@ -571,7 +571,7 @@ The Department has established its creditability and has proven its excellence w
 								<i class="fa fa-map-marker"></i>
 								<h4 class="contact-title">Email Address</h4>
 								<p class="contact-desc">
-									info@kac.edu.in
+									hod.cs.kac@gmail.com
 								</p>
 							</div>
 						</div>
