--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ With this, I welcome you to be a part of our journey towards being a centre of e
 			                                  </div> -->
 			                                  <div class="author-content">
 			                                      <h4 class="mb-0">Dr. Ananda Ch. Nayak</h4>
-			                                      <p class="mb-2">M.Sc, Phd. HOD</p>
+			                                      <p class="mb-2">M.Sc., PhD, HOD</p>
 			                                      <div class="apply-box">
 					                                  <a href="#">View More</a>
 					                              </div>
