--- a/index.html
+++ b/index.html
@@ -359,20 +359,20 @@ With this, I welcome you to be a part of our journey towards being a centre of e
 		                <div class="rs-latest-news-style7">
 		                	<div class="rs-latest-list">
 		                		<div class="sec-title mb-40">
-				                    <h2>News</h2>      
+				                    <h2>News & Events</h2>      
 				                </div>
 	                            <div class="event-item-new mb-10">
 	                                <div class="event-date">
 	                                    <div class="vertical-align">
-	                                        <span class="day">05</span>
-	                                        <span class="month">Sep</span>
+	                                        <span class="day">14</span>
+	                                        <span class="month">Jan</span>
 	                                    </div>
 	                                </div>
 	                                <div class="event-des">
 	                                    <h4 class="title">
-	                                        Eshkool Gala Day For Kids
+	                                        Alumni Meet 2023
 	                                    </h4>
-	                                    <p>Event Description. A party is a gathering of people who have been invited by a host for the purposes of… </p>
+	                                    <p>Alumni Meeting conducted on 14th Jan 2023</p>
 
 	                                </div>
 	                            </div>
