--- a/register-alumni.html
+++ b/register-alumni.html
@@ -4,7 +4,7 @@
 <head>
         <!-- meta tag -->
         <meta charset="utf-8">
-        <title>Kendrapara Autonomous College</title>
+        <title>Kendrapara Autonomous College</title> 
         <meta name="description" content="">
         <!-- responsive tag -->
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -88,19 +88,19 @@
 					                  	         <h4 class="title">Alumni Registration Form</h4>
 					                  	    </div>
 					                  	     <div class="form-group text-center">
-					                  	         <form id="" class="contact-form" method="post" action="">
+					                  	         <form id="" class="contact-form" method="post" action="" name="alumni-form">
 					                  	             <div class="row">
 					                  	                 <div class="col-lg-6">
-					                  	                    <input class="from-control" name="" type="text" placeholder="Name" id="" required="required">
+					                  	                    <input class="from-control" name="Name" type="text" placeholder="Name" id="" required="required">
 					                  	                 </div>
 					                  	                 <div class="col-lg-6">
-					                  	                    <input class="from-control" name="" type="email" placeholder="Email ID" id="" required="required">
+					                  	                    <input class="from-control" name="Email" type="email" placeholder="Email ID" id="" required="required">
 					                  	                 </div>
 					                  	                 <div class="col-lg-6">
-					                  	                    <input class="from-control" name="" type="number" placeholder="Phone No." id="" required="required">
+					                  	                    <input class="from-control" name="Phone" type="number" placeholder="Phone No." id="" required="required">
 					                  	                 </div>
 					                  	                 <div class="col-lg-6">
-					                  	                    <select class="from-control">
+					                  	                    <select class="from-control" name="YearOfPassing">
 					                  	                    	<option selected="selected">-- Year of Passing --</option>
 					                  	                    	<option>2022</option>
 					                  	                    	<option>2021</option>
@@ -115,99 +115,36 @@
 					                                </div>
 				                                    <div class="row">
 				                                    	<div class="col-md-12">
-				                                    		<h5 class="mb-2">Date of Birth</h5>
+				                                    		<h5 class="mb-2">Date Of Birth</h5>
 				                                    	</div>
-				                                    	<div class="col-lg-4">
-					                  	                    <select class="from-control">
-					                  	                    	<option selected="selected">-- Day --</option>
-					                  	                    	<option>1</option>
-					                  	                    	<option>2</option>
-					                  	                    	<option>3</option>
-					                  	                    	<option>4</option>
-					                  	                    	<option>5</option>
-					                  	                    	<option>6</option>
-					                  	                    	<option>7</option>
-					                  	                    	<option>8</option>
-					                  	                    	<option>9</option>
-					                  	                    	<option>10</option>
-					                  	                    	<option>11</option>
-					                  	                    	<option>12</option>
-					                  	                    	<option>13</option>
-					                  	                    	<option>14</option>
-					                  	                    	<option>15</option>
-					                  	                    	<option>16</option>
-					                  	                    	<option>17</option>
-					                  	                    	<option>18</option>
-					                  	                    	<option>19</option>
-					                  	                    	<option>20</option>
-					                  	                    	<option>21</option>
-					                  	                    	<option>22</option>
-					                  	                    	<option>23</option>
-					                  	                    	<option>24</option>
-					                  	                    	<option>25</option>
-					                  	                    	<option>26</option>
-					                  	                    	<option>27</option>
-					                  	                    	<option>28</option>
-					                  	                    	<option>29</option>
-					                  	                    	<option>30</option>
-					                  	                    	<option>31</option>
-					                  	                    </select>
+				                                    	<div class="col-lg-12">
+					                  	                    <input class="from-control" name="DateOfBirth" type="date" placeholder="" id="">
 					                  	                 </div>
-					                  	                 <div class="col-lg-4">
-					                  	                    <select class="from-control">
-					                  	                    	<option selected="selected">-- Month --</option>
-					                  	                    	<option>January</option>
-					                  	                    	<option>February</option>
-					                  	                    	<option>March</option>
-					                  	                    	<option>April</option>
-					                  	                    	<option>May</option>
-					                  	                    	<option>June</option>
-					                  	                    	<option>July</option>
-					                  	                    	<option>August</option>
-					                  	                    	<option>September</option>
-					                  	                    	<option>October</option>
-					                  	                    	<option>November</option>
-					                  	                    	<option>December</option>
-					                  	                    </select>
-					                  	                 </div>
-					                  	                 <div class="col-lg-4">
-					                  	                    <select class="from-control">
-					                  	                    	<option selected="selected">-- Year --</option>
-					                  	                    	<option>2022</option>
-					                  	                    	<option>2021</option>
-					                  	                    	<option>2020</option>
-					                  	                    	<option>2019</option>
-					                  	                    	<option>2018</option>
-					                  	                    	<option>2017</option>
-					                  	                    	<option>2016</option>
-					                  	                    	<option>2015</option>
-					                  	                    </select>
-					                  	                 </div>
-					                  	            </div>
+													</div>
 					                  	            <div class="row">
 				                                    	<div class="col-md-12">
 				                                    		<h5 class="mb-2">Marital Status</h5>
 				                                    	</div>
 				                                    	<div class="col-lg-12 mb-3">
 				                                    		<div class="form-check form-check-inline">
-															  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+															  <input class="form-check-input" type="radio" name="Marital_Status" id="inlineRadio1" value="Single">
 															  <label class="form-check-label" for="inlineRadio1">Single</label>
 															</div>
 															<div class="form-check form-check-inline">
-															  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+															  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Married">
 															  <label class="form-check-label" for="inlineRadio2">Married</label>
 															</div>
 				                                    	</div>
 				                                    </div>
 				                                    <div class="row">
 					                  	                 <div class="col-lg-6">
-					                  	                    <input class="from-control" name="" type="text" placeholder="Enrollment No." id="">
+					                  	                    <input class="from-control" name="EnrollmentNo" type="text" placeholder="Enrollment No." id="">
 					                  	                 </div>
 					                  	                 <div class="col-lg-6">
-					                  	                    <select class="from-control">
+					                  	                    <select class="from-control" name="Department">
 					                  	                    	<option>-- Department / Branch --</option>
-					                  	                    	<option>11</option>
-					                  	                    	<option>22</option>
+					                  	                    	<option value="MCA">MCA</option>
+					                  	                    	<option value="B.Tech">B.Tech</option>
 					                  	                    </select>
 					                  	                 </div>
 					                  	             </div>
@@ -216,16 +153,16 @@
 				                                    		<h5 class="mb-2">Address</h5>
 				                                    	</div>
 				                                    	<div class="col-lg-12">
-					                  	                    <input class="from-control" name="" type="text" placeholder="Street Address" id="">
+					                  	                    <input class="from-control" name="Street" type="text" placeholder="Street Address" id="">
 					                  	                 </div>
 					                  	                 <div class="col-lg-6">
-					                  	                    <input class="from-control" name="" type="text" placeholder="City" id="">
+					                  	                    <input class="from-control" name="City" type="text" placeholder="City" id="">
 					                  	                 </div>
 					                  	                 <div class="col-lg-6">
-					                  	                    <input class="from-control" name="" type="text" placeholder="State / Province" id="">
+					                  	                    <input class="from-control" name="State" type="text" placeholder="State / Province" id="">
 					                  	                 </div>
 					                  	                 <div class="col-lg-12">
-					                  	                    <input class="from-control" name="" type="text" placeholder="Postal / Zip Code" id="">
+					                  	                    <input class="from-control" name="ZipCode" type="text" placeholder="Postal / Zip Code" id="">
 					                  	                 </div>
 				                                    </div>
 				                                    <div class="row">
@@ -234,24 +171,24 @@
 				                                    	</div>
 				                                    	<div class="col-lg-12 mb-3">
 				                                    		<div class="form-check form-check-inline">
-															  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio21" value="option1">
+															  <input class="form-check-input" type="radio" name="Alumni_Status" id="inlineRadio21" value="Employment">
 															  <label class="form-check-label" for="inlineRadio21">Employment</label>
 															</div>
 															<div class="form-check form-check-inline">
-															  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio22" value="option2">
+															  <input class="form-check-input" type="radio" name="Alumni_Status" id="inlineRadio22" value="Higher_Studies">
 															  <label class="form-check-label" for="inlineRadio22">Higher Studies</label>
 															</div>
 															<div class="form-check form-check-inline">
-															  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio23" value="option1">
+															  <input class="form-check-input" type="radio" name="Alumni_Status" id="inlineRadio23" value="Self_Employed">
 															  <label class="form-check-label" for="inlineRadio23">Self Employed</label>
 															</div>
 															<div class="form-check form-check-inline">
-															  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio24" value="option2">
+															  <input class="form-check-input" type="radio" name="Alumni_Status" id="inlineRadio24" value="Others">
 															  <label class="form-check-label" for="inlineRadio24">Others</label>
 															</div>
 				                                    	</div>
 				                                    </div>
-				                                    <div class="row">
+				                                    <!-- <div class="row">
 				                                    	<div class="col-md-12">
 				                                    		<h5 class="mb-2">Upload Photo</h5>
 				                                    	</div>
@@ -259,7 +196,7 @@
 					                  	                    <input class="from-control mb-2" name="" type="file" placeholder="Upload Photo" id="">
 					                  	                    <p><small class="text-danger">(.jpg or .png and less then 1MB size files are accepted)</small></p>
 					                  	                 </div>
-				                                    </div>
+				                                    </div> -->
 					                  	                 <div class="col-lg-12">
 					                  	                    <input type="submit" value="Submit" class="wpcf7-form-control wpcf7-submit mb-3">
 					                  	                 </div>
@@ -336,6 +273,17 @@
 		        //   $("#advanceOption").text("Hide Additional Query");
 		      });
 	    </script>
+		<script>
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbxd1AZ_TP8Fk-UqwHSsFPkWGdNL2etIVG7STD_IdUnGgXg2CCCcMJtfU-vCjrikffTA/exec'
+            const form = document.forms['alumni-form']
+          
+            form.addEventListener('submit', e => {
+              e.preventDefault()
+              fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+                .then(response => alert("Alumni Registration Success!!!"))
+                .catch(error => console.error('Error!', error.message))
+            })
+          </script>
     </body>
 
 </html>
