--- a/register-alumni.html
+++ b/register-alumni.html
@@ -110,6 +110,7 @@
 					                  	                    	<option>2017</option>
 					                  	                    	<option>2016</option>
 					                  	                    	<option>2015</option>
+											<option>2014</option>
 					                  	                    </select>
 					                  	                 </div>
 					                                </div>
@@ -188,6 +189,11 @@
 															</div>
 				                                    	</div>
 				                                    </div>
+										 <div class="row">
+										    <div class="col-lg-12">
+					                  	                    <input class="from-control" name="CompanyName" type="text" placeholder="Your Company Name" id="" disabled>
+					                  	                 </div>
+													</div>
 				                                    <!-- <div class="row">
 				                                    	<div class="col-md-12">
 				                                    		<h5 class="mb-2">Upload Photo</h5>
