--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ The Department has established its creditability and has proven its excellence w
             <div class="footer-bottom">
                 <div class="container">
                     <div class="copyright">
-                        <p>&copy; 2023. All Rights Reserved. Kendrapara Autonomous College. Designed by <a href="javascript:void(0)" target="https://betacentauri.in/">Beta Centaury (P) Ltd.</a></p>
+                        <p>&copy; 2023. All Rights Reserved. Kendrapara Autonomous College. Designed by <a href="https://betacentauri.in/" target="_blank">Beta Centaury (P) Ltd.</a></p>
                     </div>
                 </div>
             </div>
