--- a/register-alumni.html
+++ b/register-alumni.html
@@ -90,11 +90,11 @@
 					                  	         <h4 class="title">Alumni Registration Form</h4>
 					                  	    </div>
 					                  	     <div class="form-group text-center">
-													<div class="overlay"></div>
+														<!-- <div class="overlay"></div>
 													<div class="spanner">
 														<p>Processing...</p>
 													</div>
-													<div class="loader" hidden="Hide"></div>
+													<div class="loader" hidden="Hide"></div> -->
 													 
 					                  	         <form id="" class="contact-form" method="post" action="" name="alumni-form">
 					                  	            <div class="row">
