--- a/register-alumni.html
+++ b/register-alumni.html
@@ -105,7 +105,7 @@
 					                  	                    <input class="from-control" name="Email" type="email" placeholder="Email ID" id="" required="required">
 					                  	                 </div>
 					                  	                 <div class="col-lg-6">
-					                  	                    <input class="from-control" name="Phone" type="number" placeholder="Phone No." id="" required="required">
+					                  	                    <input class="from-control" name="Phone" type="text" placeholder="Phone No." id="" required="required">
 					                  	                 </div>
 					                  	                 <div class="col-lg-6">
 					                  	                    <select class="from-control" name="YearOfPassing">
