--- a/register-alumni.html
+++ b/register-alumni.html
@@ -110,7 +110,8 @@
 					                  	                 <div class="col-lg-6">
 					                  	                    <select class="from-control" name="YearOfPassing">
 					                  	                    	<option selected="selected">-- Year of Passing --</option>
-					                  	                    	<option>2022</option>
+					                  	                    	<option>2023</option>
+											 <option>2022</option>
 					                  	                    	<option>2021</option>
 					                  	                    	<option>2020</option>
 					                  	                    	<option>2019</option>
@@ -118,6 +119,7 @@
 					                  	                    	<option>2017</option>
 					                  	                    	<option>2016</option>
 					                  	                    	<option>2015</option>
+											<option>2014</option>
 					                  	                    </select>
 					                  	                 </div>
 					                                </div>
@@ -151,7 +153,7 @@
 					                  	                 <div class="col-lg-6">
 					                  	                    <select class="from-control" name="Department">
 					                  	                    	<option>-- Department / Branch --</option>
-					                  	                    	<option value="BSc">BSc</option>
+					                  	                    	<option value="BSc">CS</option>
 					                  	                    </select>
 					                  	                 </div>
 					                  	             </div>
