--- a/register-alumni.html
+++ b/register-alumni.html
@@ -153,7 +153,7 @@
 					                  	                 <div class="col-lg-6">
 					                  	                    <select class="from-control" name="Department">
 					                  	                    	<option>-- Department / Branch --</option>
-					                  	                    	<option value="BSc">CS</option>
+					                  	                    	<option value="CS">CS</option>
 					                  	                    </select>
 					                  	                 </div>
 					                  	             </div>
