--- a/register-alumni.html
+++ b/register-alumni.html
@@ -110,16 +110,15 @@
 					                  	                 <div class="col-lg-6">
 					                  	                    <select class="from-control" name="YearOfPassing">
 					                  	                    	<option selected="selected">-- Year of Passing --</option>
-					                  	                    	<option>2023</option>
-											 <option>2022</option>
-					                  	                    	<option>2021</option>
-					                  	                    	<option>2020</option>
-					                  	                    	<option>2019</option>
-					                  	                    	<option>2018</option>
-					                  	                    	<option>2017</option>
-					                  	                    	<option>2016</option>
-					                  	                    	<option>2015</option>
-											<option>2014</option>
+					                  	                    	<option value="2023">2023</option>
+					                  	                    	<option value="2022">2022</option>
+					                  	                    	<option value="2021">2021</option>
+					                  	                    	<option value="2020">2020</option>
+					                  	                    	<option value="2019">2019</option>
+					                  	                    	<option value="2018">2018</option>
+					                  	                    	<option value="2017">2017</option>
+					                  	                    	<option value="2016">2016</option>
+					                  	                    	<option value="2015">2015</option>
 					                  	                    </select>
 					                  	                 </div>
 					                                </div>
