--- a/register-alumni.html
+++ b/register-alumni.html
@@ -42,6 +42,21 @@
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+	<style>
+			.button {
+				background-color: #4CAF50; /* Green */
+				border: none;
+				color: white;
+				padding: 15px 32px;
+				text-align: center;
+				text-decoration: none;
+				display: inline-block;
+				font-size: 16px;
+				margin: 4px 2px;
+				cursor: pointer;
+			}
+
+		</style>
     </head>
     <body class="home2">
 
@@ -212,8 +227,8 @@
 					                  	                 </div>
 				                                    </div> -->
 					                  	                 <div class="col-lg-12">
-					                  	                    <input type="submit" value="Submit" class="wpcf7-form-control wpcf7-submit mb-3" id="submit-btn">
-					                  	                 </div>
+											 <button type="submit" id="btnSubmit" class="button">Submit</button>
+									     		</div>
 														<div class="row mb-3">
 															<div class="col-lg-12">
 						                  	                 	<a href="index.html"><i class="fa fa-home">&nbsp;</i>Go to Home</a>
