--- a/faculty.html
+++ b/faculty.html
@@ -237,7 +237,7 @@
                 						<td>PhD (IIT Guwahati)</td>
                 						<td>nayakanand89@gmail.com</td>
                 						<td>9439530098</td>
-                						<td><img src="images/faculty.jpg" class="img-sm img-thumbnail" alt="image"></td>
+                						<td><img src="images/ananda.jpg" class="img-sm img-thumbnail" alt="image"></td>
                 					</tr>
 							<tr>
                 						<td>1</td>
@@ -246,7 +246,7 @@
                 						<td>MCA (Utkal University, vanivihar)</td>
                 						<td>sanguinesoumya@gmail.com</td>
                 						<td>7504328244</td>
-                						<td><img src="images/faculty.jpg" class="img-sm img-thumbnail" alt="image"></td>
+                						<td><img src="images/soumya.jpg" class="img-sm img-thumbnail" alt="image"></td>
                 					</tr>
                 					<tr>
                 						<td>2</td>
