--- a/faculty.html
+++ b/faculty.html
@@ -237,7 +237,7 @@
                 						<td>PhD (IIT Guwahati)</td>
                 						<td>nayakanand89@gmail.com</td>
                 						<td>9439530098</td>
-                						<td><img src="images/ananda.jpg" class="img-sm img-thumbnail" alt="image"></td>
+                						<td><img src="images/ananda.jpeg" class="img-sm img-thumbnail" alt="image"></td>
                 					</tr>
 							<tr>
                 						<td>1</td>
