--- a/faculty.html
+++ b/faculty.html
@@ -255,7 +255,7 @@
                 						<td>MCA (BPUT, Rourkela)</td>
                 						<td>saniayakumarswain@gmail.com</td>
                 						<td>7064078792</td>
-                						<td><img src="images/faculty.jpeg" class="img-sm img-thumbnail" alt="image"></td>
+                						<td><img src="images/faculty.jpg" class="img-sm img-thumbnail" alt="image"></td>
                 					</tr>
                 					
                 					<tr>
