--- a/faculty.html
+++ b/faculty.html
@@ -232,7 +232,7 @@
                 				<tbody>
 								<tr>
                 						<td>1</td>
-                						<td>Dr. Ananda Chandra Nayak</td>
+                						<td><a href="https://sites.google.com/view/acnayak">Dr. Ananda Chandra Nayak</a></td>
                 						<td>HOD</td>
                 						<td>PhD (IIT Guwahati)</td>
                 						<td>nayakanand89@gmail.com</td>
