--- a/gallery.html
+++ b/gallery.html
@@ -221,7 +221,7 @@
             			    <div class="gallery-desc">
             					<h3><a href="#">Photo Title Here</a></h3>
             					<p>There are many variations of Lorem Ipsum available</p>
-            					<a class="image-popup" href="images/gallery/Alumni1.jpg" title="Photo Title Here">
+            					<a class="image-popup" href="images/gallery/Alumni1.jpeg" title="Alumni Meet-2023">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
@@ -233,7 +233,7 @@
             			    <div class="gallery-desc">
             					<h3><a href="#">Photo Title Here</a></h3>
             					<p>There are many variations of Lorem Ipsum available</p>
-            					<a class="image-popup" href="images/gallery/Alumni2.jpg" title="Photo Title Here">
+            					<a class="image-popup" href="images/gallery/Alumni2.jpeg" title="Alumni with Current Students 2023">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
