--- a/gallery.html
+++ b/gallery.html
@@ -217,9 +217,9 @@
             	<div class="row">
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/gallery/1.jpg" alt="Gallery Image" />
+            			    <img src="images/gallery/Alumni1.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Photo Title Here</a></h3>
+            					<h3><a href="#">Alumni Meet-2023</a></h3>
             					<p>There are many variations of Lorem Ipsum available</p>
             					<a class="image-popup" href="images/gallery/Alumni1.jpeg" title="Alumni Meet-2023">
             						<i class="fa fa-search"></i>
@@ -229,9 +229,9 @@
             		</div>
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/gallery/2.jpg" alt="Gallery Image" />
+            			    <img src="images/gallery/Alumni2.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Photo Title Here</a></h3>
+            					<h3><a href="#">Alumni with Current students 2023</a></h3>
             					<p>There are many variations of Lorem Ipsum available</p>
             					<a class="image-popup" href="images/gallery/Alumni2.jpeg" title="Alumni with Current Students 2023">
             						<i class="fa fa-search"></i>
