--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ The Department has established its creditability and has proven its excellence w
                         <ul>
                             <li><a href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="javascript:void(0)"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://twitter.com/Kdp_Auto_Clg?t=rq8jkxM3V3dSMHsphnnmQw&s=08"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="javascript:void(0)"><i class="fa fa-pinterest-p"></i></a></li>
                             <li><a href="javascript:void(0)"><i class="fa fa-vimeo"></i></a></li>    
                         </ul>
