--- a/index.html
+++ b/index.html
@@ -461,9 +461,9 @@ The Department has established its creditability and has proven its excellence w
                                     <img src="images/testimonial/1.jpg" alt="Jhon Smith">
                                 </div>
                                 <div class="testi-desc">
-                                    <h4 class="testi-name">Luise Henrikes</h4>
+                                    <h4 class="testi-name">Aswini Kumar Rout</h4>
                                     <p>
-                                        Etiam non elit nec augue tempor gravida et sed velit. Aliquam tempus eget lorem ut malesuada. Phasellus dictum est sed libero posuere dignissim.
+                                        The department provides quality teaching and the environment to face the challenges in future. 
                                     </p>
                                 </div>
                             </div>
@@ -472,9 +472,9 @@ The Department has established its creditability and has proven its excellence w
                                     <img src="images/testimonial/2.jpg" alt="Jhon Smith">
                                 </div>
                                 <div class="testi-desc">
-                                    <h4 class="testi-name">Aliana D’suza</h4>
+                                    <h4 class="testi-name">Sradhanjali Padhi</h4>
                                     <p>
-                                        Tempor non elit nec augue nec gravida et sed velit. Aliquam tempus eget lorem ut malesuada. Phasellus dictum est sed libero posuere dignissim.
+                                        The department is one of the best for the course of BSc Computer Science (Hons) across the state of Odisha. 
                                     </p>
                                 </div>
                             </div>
@@ -483,9 +483,9 @@ The Department has established its creditability and has proven its excellence w
                                     <img src="images/testimonial/3.jpg" alt="Jhon Smith">
                                 </div>
                                 <div class="testi-desc">
-                                    <h4 class="testi-name">Aliana D’suza</h4>
+                                    <h4 class="testi-name">Stitipragyan Singh</h4>
                                     <p>
-                                        Tempor non elit nec augue nec gravida et sed velit. Aliquam tempus eget lorem ut malesuada. Phasellus dictum est sed libero posuere dignissim.
+                                        The department provides the best platform to learn the basic courses in computer science and to build a good career.
                                     </p>
                                 </div>
                             </div>
@@ -494,9 +494,9 @@ The Department has established its creditability and has proven its excellence w
                                     <img src="images/testimonial/4.jpg" alt="Jhon Smith">
                                 </div>
                                 <div class="testi-desc">
-                                    <h4 class="testi-name">Aliana D’suza</h4>
+                                    <h4 class="testi-name">Suryakanta Patra</h4>
                                     <p>
-                                        Tempor non elit nec augue nec gravida et sed velit. Aliquam tempus eget lorem ut malesuada. Phasellus dictum est sed libero posuere dignissim.
+                                        A nice place to learn many things.
                                     </p>
                                 </div>
                             </div>
