--- a/index.html
+++ b/index.html
@@ -505,9 +505,9 @@ The Department has established its creditability and has proven its excellence w
                                     <img src="images/testimonial/5.jpg" alt="Jhon Smith">
                                 </div>
                                 <div class="testi-desc">
-                                    <h4 class="testi-name">Aliana D’suza</h4>
+                                    <h4 class="testi-name">Soumya Ranjan Pratap</h4>
                                     <p>
-                                        Tempor non elit nec augue nec gravida et sed velit. Aliquam tempus eget lorem ut malesuada. Phasellus dictum est sed libero posuere dignissim.
+                                        Holistic learning.
                                     </p>
                                 </div>
                             </div>
