--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ The Department has established its creditability and has proven its excellence w
                         <div  class="rs-carousel owl-carousel" data-loop="true" data-items="2" data-margin="30" data-autoplay="true" data-autoplay-timeout="5000" data-smart-speed="1200" data-dots="true" data-nav="true" data-nav-speed="false" data-mobile-device="1" data-mobile-device-nav="true" data-mobile-device-dots="true" data-ipad-device="2" data-ipad-device-nav="true" data-ipad-device-dots="true" data-md-device="2" data-md-device-nav="true" data-md-device-dots="true">
                             <div class="testimonial-item">
                                 <div class="testi-img">
-                                    <img src="images/testimonial/1.jpg" alt="Jhon Smith">
+                                    <img src="images/testimonial/1.jpg" alt="Aswini">
                                 </div>
                                 <div class="testi-desc">
                                     <h4 class="testi-name">Aswini Kumar Rout</h4>
@@ -469,7 +469,7 @@ The Department has established its creditability and has proven its excellence w
                             </div>
                             <div class="testimonial-item">
                                 <div class="testi-img">
-                                    <img src="images/testimonial/2.jpg" alt="Jhon Smith">
+                                    <img src="images/testimonial/2.jpg" alt="Sraddha">
                                 </div>
                                 <div class="testi-desc">
                                     <h4 class="testi-name">Sradhanjali Padhi</h4>
@@ -480,7 +480,7 @@ The Department has established its creditability and has proven its excellence w
                             </div>
                             <div class="testimonial-item">
                                 <div class="testi-img">
-                                    <img src="images/testimonial/3.jpg" alt="Jhon Smith">
+                                    <img src="images/testimonial/3.jpg" alt="Pragnya">
                                 </div>
                                 <div class="testi-desc">
                                     <h4 class="testi-name">Stitipragyan Singh</h4>
@@ -491,7 +491,7 @@ The Department has established its creditability and has proven its excellence w
                             </div>
                             <div class="testimonial-item">
                                 <div class="testi-img">
-                                    <img src="images/testimonial/4.jpg" alt="Jhon Smith">
+                                    <img src="images/testimonial/4.jpg" alt="Suryakant">
                                 </div>
                                 <div class="testi-desc">
                                     <h4 class="testi-name">Suryakanta Patra</h4>
@@ -502,12 +502,12 @@ The Department has established its creditability and has proven its excellence w
                             </div>
                             <div class="testimonial-item">
                                 <div class="testi-img">
-                                    <img src="images/testimonial/5.jpg" alt="Jhon Smith">
+                                    <img src="images/testimonial/5.jpg" alt="Soumya">
                                 </div>
                                 <div class="testi-desc">
                                     <h4 class="testi-name">Soumya Ranjan Pratap</h4>
                                     <p>
-                                        Holistic learning.
+                                        I have learnt many things during my three year in the department and I would recommend to join for the course in this college. 
                                     </p>
                                 </div>
                             </div>
