--- a/gallery.html
+++ b/gallery.html
@@ -241,11 +241,11 @@
             		</div>
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/gallery/3.jpg" alt="Gallery Image" />
+            			    <img src="images/gallery/Autonomy Seminar.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Photo Title Here</a></h3>
-            					<p>There are many variations of Lorem Ipsum available</p>
-            					<a class="image-popup" href="images/gallery/3.jpg" title="Photo Title Here">
+            					<h3><a href="#">2nd UGC Autonomy Seminar</a></h3>
+            					<p>2nd UGC Autonomy Seminar of session 2022-23 by Mr. Satyabrata Swain, Intel Corp.</p>
+            					<a class="image-popup" href="images/gallery/Autonomy Seminar.jpeg" title="Photo Title Here">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
@@ -253,10 +253,10 @@
             		</div>
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/gallery/4.jpg" alt="Gallery Image" />
+            			    <img src="images/gallery/farewell 2023.jpg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Photo Title Here</a></h3>
-            					<a class="image-popup" href="images/gallery/4.jpg" title="Photo Title Here">
+            					<h3><a href="#">Farewell Ceremoney 2023</a></h3>
+            					<a class="image-popup" href="images/gallery/farwell 2023.jpg" title="Farewell Ceremony 2023">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
@@ -266,11 +266,11 @@
                 <div class="row">
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/gallery/5.jpg" alt="Gallery Image" />
+            			    <img src="images/gallery/farewell 23.jpg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Photo Title Here</a></h3>
-            					<p>There are many variations of Lorem Ipsum available</p>
-            					<a class="image-popup" href="images/gallery/5.jpg" title="Photo Title Here">
+            					<h3><a href="#">farewell 2023</a></h3>
+            					<p>farewell ceremony organized for 2020-23 admission batch</p>
+            					<a class="image-popup" href="images/gallery/farewell 23.jpg" title="Farewell ceremony">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
@@ -278,11 +278,11 @@
             		</div>
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/gallery/6.jpg" alt="Gallery Image" />
+            			    <img src="images/gallery/Batch 2020-23.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
-            					<h3><a href="#">Photo Title Here</a></h3>
-            					<p>There are many variations of Lorem Ipsum available</p>
-            					<a class="image-popup" href="images/gallery/6.jpg" title="Photo Title Here">
+            					<h3><a href="#">Graduating batch 2023</a></h3>
+            					<p>Graduation day 2023</p>
+            					<a class="image-popup" href="images/gallery/Batch 2020-23.jpg" title="Batch of 2020-23">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
