--- a/gallery.html
+++ b/gallery.html
@@ -253,10 +253,10 @@
             		</div>
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/gallery/farewell 2023.jpg" alt="Gallery Image" />
+            			    <img src="images/gallery/farewell 2023.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
             					<h3><a href="#">Farewell Ceremoney 2023</a></h3>
-            					<a class="image-popup" href="images/gallery/farwell 2023.jpg" title="Farewell Ceremony 2023">
+            					<a class="image-popup" href="images/gallery/farwell 2023.jpeg" title="Farewell Ceremony 2023">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
@@ -266,11 +266,11 @@
                 <div class="row">
             		<div class="col-lg-3 col-md-6">
             			<div class="gallery-item">
-            			    <img src="images/gallery/farewell 23.jpg" alt="Gallery Image" />
+            			    <img src="images/gallery/farewell 23.jpeg" alt="Gallery Image" />
             			    <div class="gallery-desc">
             					<h3><a href="#">farewell 2023</a></h3>
             					<p>farewell ceremony organized for 2020-23 admission batch</p>
-            					<a class="image-popup" href="images/gallery/farewell 23.jpg" title="Farewell ceremony">
+            					<a class="image-popup" href="images/gallery/farewell 23.jpeg" title="Farewell ceremony">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
@@ -282,7 +282,7 @@
             			    <div class="gallery-desc">
             					<h3><a href="#">Graduating batch 2023</a></h3>
             					<p>Graduation day 2023</p>
-            					<a class="image-popup" href="images/gallery/Batch 2020-23.jpg" title="Batch of 2020-23">
+            					<a class="image-popup" href="images/gallery/Batch 2020-23.jpeg" title="Batch of 2020-23">
             						<i class="fa fa-search"></i>
             					</a>
             			    </div>
