--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ The Department has established its creditability and has proven its excellence w
                         <a href="#"><img src="images/partner/4.png" alt="Partner Image"></a>
                     </div>
                     <div class="partner-item">
-                        <a href="#"><img src="images/partner/5.png" alt="Partner Image"></a>
+                        <a href="#"><img src="images/partner/Batch 2020-23.jpeg" alt="Partner Image"></a>
                     </div>
                 </div>
             </div>
