--- a/faculty.html
+++ b/faculty.html
@@ -265,7 +265,7 @@
                 						<td>MCA (BPUT, Rourkela)</td>
                 						<td>patra.subratkumar@gmail.com</td>
                 						<td>9437255685</td>
-                						<td><img src="Subrat Sir.jpg" class="img-sm img-thumbnail" alt="image"></td>
+                						<td><img src="images/Subrat Sir.jpg" class="img-sm img-thumbnail" alt="image"></td>
                 					</tr>
                 					<tr>
                 						<td>4</td>
