--- a/faculty.html
+++ b/faculty.html
@@ -274,7 +274,7 @@
                 						<td>MCA (Utkal University, Bhubaneswar)</td>
                 						<td>narayank.ba@gmail.com</td>
                 						<td>9938316798</td>
-                						<td><img src="images/faculty.jpg" class="img-sm img-thumbnail" alt="image"></td>
+                						<td><img src="images/JyotiSir.jpg" class="img-sm img-thumbnail" alt="image"></td>
                 					</tr>
                 				</tbody>
                 			</table>
