--- a/index.html
+++ b/index.html
@@ -483,11 +483,9 @@ The Department has established its creditability and has proven its excellence w
                                     <img src="images/testimonial/3.jpg" alt="Pragnya">
                                 </div>
                                 <div class="testi-desc">
-                                    <h4 class="testi-name">Stitipragyan Singh</h4>
+                                    <h4 class="testi-name">Sthitiprangya Singh</h4>
                                     <p>
-                                        The department provides the best platform to learn the basic courses in computer science and to build a good career.
-                                    </p>
-                                </div>
+                                        My teachers have taught me the techniques to teach technology, even to the nontechnical mind through only two words : Proper Guidance.
                             </div>
                             <div class="testimonial-item">
                                 <div class="testi-img">
